@@ -2,13 +2,13 @@ Testing class InverseNormal
 checkConstructorAndDestructor()
 checkCopyConstructor()
 streamObject(const T & anObject)
-class=InverseNormal name=InverseNormal dimension=1 lambda=0.5 mu=2
+class=InverseNormal name=InverseNormal dimension=1 mu=2 lambda=0.5
 streamObject(const T & anObject)
-class=InverseNormal name=InverseNormal dimension=1 lambda=0.5 mu=2
+class=InverseNormal name=InverseNormal dimension=1 mu=2 lambda=0.5
 areSameObjects(const T & firstObject, const T & secondObject)
 areDifferentObjects(const T & firstObject, const T & secondObject)
-Distribution class=InverseNormal name=InverseNormal dimension=1 lambda=0.5 mu=2
-Distribution InverseNormal(lambda = 0.5, mu = 2)
+Distribution class=InverseNormal name=InverseNormal dimension=1 mu=2 lambda=0.5
+Distribution InverseNormal(mu = 2, lambda = 0.5)
 Elliptical = false
 Continuous = true
 range=class=Interval name=Unnamed dimension=1 lower bound=class=Point name=Unnamed dimension=1 values=[0] upper bound=class=Point name=Unnamed dimension=1 values=[472.248] finite lower bound=[1] finite upper bound=[0]
@@ -33,7 +33,7 @@ quantile=class=Point name=Unnamed dimension=1 values=[8.26789]
 cdf(quantile)=0.95
 Minimum volume interval=class=Interval name=Unnamed dimension=1 lower bound=class=Point name=Unnamed dimension=1 values=[0.0274495] upper bound=class=Point name=Unnamed dimension=1 values=[8.27076] finite lower bound=[1] finite upper bound=[1]
 threshold=0.95
-Minimum volume level set=class=LevelSet name=Unnamed dimension=1 function=class=Function name=Unnamed implementation=class=FunctionImplementation name=Unnamed description=[X0,-logPDF] evaluationImplementation=MinimumVolumeLevelSetEvaluation(InverseNormal(lambda = 0.5, mu = 2)) gradientImplementation=MinimumVolumeLevelSetGradient(InverseNormal(lambda = 0.5, mu = 2)) hessianImplementation=class=CenteredFiniteDifferenceHessian name=Unnamed epsilon=class=Point name=Unnamed dimension=1 values=[0.0001] evaluation=MinimumVolumeLevelSetEvaluation(InverseNormal(lambda = 0.5, mu = 2)) level=4.73175
+Minimum volume level set=class=LevelSet name=Unnamed dimension=1 function=class=Function name=Unnamed implementation=class=FunctionImplementation name=Unnamed description=[X0,-logPDF] evaluationImplementation=MinimumVolumeLevelSetEvaluation(InverseNormal(mu = 2, lambda = 0.5)) gradientImplementation=MinimumVolumeLevelSetGradient(InverseNormal(mu = 2, lambda = 0.5)) hessianImplementation=class=CenteredFiniteDifferenceHessian name=Unnamed epsilon=class=Point name=Unnamed dimension=1 values=[0.0001] evaluation=MinimumVolumeLevelSetEvaluation(InverseNormal(mu = 2, lambda = 0.5)) level=4.73175
 beta=0.00881103
 Bilateral confidence interval=class=Interval name=Unnamed dimension=1 lower bound=class=Point name=Unnamed dimension=1 values=[0.0917281] upper bound=class=Point name=Unnamed dimension=1 values=[12.6739] finite lower bound=[1] finite upper bound=[1]
 beta=0.95
@@ -51,11 +51,11 @@ covariance=class=CovarianceMatrix dimension=1 implementation=class=MatrixImpleme
 correlation=class=CovarianceMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
 spearman=class=CovarianceMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
 kendall=class=CovarianceMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
-parameters=[[lambda : 0.5, mu : 2]]
+parameters=[[mu : 2, lambda : 0.5]]
 standard moment n=0, value=class=Point name=Unnamed dimension=1 values=[1]
 standard moment n=1, value=class=Point name=Unnamed dimension=1 values=[2]
 standard moment n=2, value=class=Point name=Unnamed dimension=1 values=[20]
 standard moment n=3, value=class=Point name=Unnamed dimension=1 values=[488]
 standard moment n=4, value=class=Point name=Unnamed dimension=1 values=[19600]
 standard moment n=5, value=class=Point name=Unnamed dimension=1 values=[1.09955e+06]
-Standard representative=InverseNormal(lambda = 0.5, mu = 2)
+Standard representative=InverseNormal(mu = 2, lambda = 0.5)
