@@ -1,15 +1,12 @@
 %feature("docstring") OT::InverseNormal
 "Inverse normal distribution.
 
-Available constructors:
-    InverseNormal(*lambda=1.0, mu=1.0*)
-
 Parameters
 ----------
-lambda : float, :math:`\lambda > 0`
-    Scale parameter :math:`\lambda`.
 mu : float, :math:`\mu > 0`
     Location (mean) parameter :math:`\mu`.
+lambda : float, :math:`\lambda > 0`
+    Rate parameter :math:`\lambda`.
 
 Notes
 -----
@@ -47,12 +44,12 @@ Draw a sample:
 // ---------------------------------------------------------------------
 
 %feature("docstring") OT::InverseNormal::getLambda
-"Accessor to the distribution's scale parameter.
+"Accessor to the distribution's rate parameter.
 
 Returns
 -------
 lambda : float
-    Scale parameter :math:`\lambda`."
+    Rate parameter :math:`\lambda`."
 
 // ---------------------------------------------------------------------
 
@@ -66,12 +63,13 @@ mu : float
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::InverseNormal::setLambdaMu
+%feature("docstring") OT::InverseNormal::setMuLambda
 "Accessor to the distribution's parameters.
 
 Parameters
 ----------
-lambda : float, :math:`\lambda > 0`
-    Scale parameter :math:`\lambda`.
 mu : float, :math:`\mu > 0`
-    Location (mean) parameter :math:`\mu`."
+    Location (mean) parameter :math:`\mu`.
+lambda : float, :math:`\lambda > 0`
+    Rate parameter :math:`\lambda`."
+
